配置中心自动读取本地文件夹的配置文件

--- a/vc-web/vc-web-cfg/src/main/resources/bootstrap.yml
+++ b/vc-web/vc-web-cfg/src/main/resources/bootstrap.yml
@@ -12,7 +12,7 @@ spring:
           #是否暴露加解密接口
           enabled: true
         git:
-          uri: file://E:/workspace-vc/vc #http://120.26.220.241/BurningGroup/vc.git
+          uri: file://${project.parent.parent.basedir} #http://120.26.220.241/BurningGroup/vc.git file://E:/workspace-vc/vc
           searchPaths:  vc-env/env
           username: zhangkejiang
           password: ss123456
