--- a/vc-env/env/phoenix-srv-dev.yml
+++ b/vc-env/env/phoenix-srv-dev.yml
@@ -1,7 +1,10 @@
 phoenix:
   #zookeeper所在主机地址
   #zk_url: hb-proxy-pub-bp11zgdd317e4af0r-001.hbase.rds.aliyuncs.com,hb-proxy-pub-bp11zgdd317e4af0r-006.hbase.rds.aliyuncs.com,hb-proxy-pub-bp11zgdd317e4af0r-005.hbase.rds.aliyuncs.com
+  #测试地址
   zk_url: hb-proxy-pub-bp1xa9wgerhn7o1pu-001.hbase.rds.aliyuncs.com,hb-proxy-pub-bp1xa9wgerhn7o1pu-002.hbase.rds.aliyuncs.com,hb-proxy-pub-bp1xa9wgerhn7o1pu-003.hbase.rds.aliyuncs.com
+  #正式地址
+#  zk_url: hb-proxy-pub-bp11x2d97s2oe0b5m-001.hbase.rds.aliyuncs.com,hb-proxy-pub-bp11x2d97s2oe0b5m-002.hbase.rds.aliyuncs.com,hb-proxy-pub-bp11x2d97s2oe0b5m-003.hbase.rds.aliyuncs.com
 server:
   port: 11117
 
@@ -9,6 +12,7 @@ spring:
   redis:
     host: 118.178.229.234
     port: 63791
+    password: WDnlDnt6f7GuYh
     database: 7
   aop:
     proxyTargetClass: true
@@ -45,6 +49,7 @@ ccclubs:
       mongoInsertMaxDurTime: 10000
       mongoInsertThreads: 20
       mongoInsertQueueMax: 200000
+
 mybatis:
   scan:
     basePackage: com.ccclubs.**.mapper
