1.增加特定车辆报文监听接口2.优化网关

--- a/vc-biz/vc-biz-message/vc-biz-gateway/vc-biz-gateway-gb-srv/pom.xml
+++ b/vc-biz/vc-biz-message/vc-biz-gateway/vc-biz-gateway-gb-srv/pom.xml
@@ -44,6 +44,12 @@
           <artifactId>spring-boot-starter-undertow</artifactId>
       </dependency>
 
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-configuration-processor</artifactId>
+          <optional>true</optional>
+      </dependency>
+
       <!--netty-->
       <dependency>
           <groupId>io.netty</groupId>
