complete the code of gateway-808
1.大致完成808网关编码
2.大致自测了下，待更完整的自测

--- a/vc-biz/vc-biz-message/vc-biz-gateway/vc-biz-gateway-common-inf/pom.xml
+++ b/vc-biz/vc-biz-message/vc-biz-gateway/vc-biz-gateway-common-inf/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>vc-biz-gateway-common-inf</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
