--- a/vc-env/env/gateway-808-srv-dev.yml
+++ b/vc-env/env/gateway-808-srv-dev.yml
@@ -3,7 +3,7 @@ server:
 
 # netty配置
 netty:
-  tcp-port: 27700
+  tcp-port: 26700
   boss-count: 1
   worker-count: 10
   keep-alive: false
@@ -27,10 +27,40 @@ spring:
 kafka:
   topic:
     gateway:
-      error: topic_gb_error
-      success: topic_gb_success
+      error: topic_808_error
+      success: topic_808_success
       conn: topic_conn_status
-      oversee: topic_gb_oversee # 用于监听特定车辆的报文
+      oversee: topic_808_oversee # 用于监听特定车辆的报文
+
+#jt808网关转发到MQ的topic
+mq:
+  topic: ser
+
+#阿里云 MQ 配置
+ons:
+  producerId: PID_terminal_ser
+  accessKey: M6dHCyKyKYUCNbW4
+  secretKey: k6gOSH3dNJjFYze4CuxbBWS1PWqvVk
+
+mqttAliyun:
+  #阿里云 mqtt broker 地址
+  host: tcp://mqtt.cn-hangzhou.aliyuncs.com
+  #阿里云 mqtt broker 端口
+  port: 1883
+  #阿里云 mqClient ID 前缀
+  preId: GID_pro
+  #阿里云用户名
+  userName: M6dHCyKyKYUCNbW4
+  #阿里云密码
+  pwd: 2u0w1llRPSxKeNSZDq95jQAE95c=
+  #订阅主题
+  subTopic: protocol/jt808/#
+  #是否记录上行记录
+  logUpDown: true
+
+
+
+
 
 #spring:
 #  redis:
