--- a/vc-biz/vc-biz-message/vc-biz-gateway/vc-biz-gateway-808-ca-inf/pom.xml
+++ b/vc-biz/vc-biz-message/vc-biz-gateway/vc-biz-gateway-808-ca-inf/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>vc-biz-gateway-808-inf</artifactId>
+    <artifactId>vc-biz-gateway-808-ca-inf</artifactId>
     <dependencies>
         <dependency>
             <groupId>www.ccclubs</groupId>
@@ -17,5 +17,6 @@
             <version>${biz.version}</version>
         </dependency>
     </dependencies>
+
 
 </project>
