--- a/vc-web/vc-web-message/vc-web-gateway/vc-web-gateway-808-ca-srv/pom.xml
+++ b/vc-web/vc-web-message/vc-web-gateway/vc-web-gateway-808-ca-srv/pom.xml
@@ -3,17 +3,27 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>vc-biz-gateway</artifactId>
+        <artifactId>vc-web-gateway</artifactId>
         <groupId>www.ccclubs</groupId>
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>vc-biz-gateway-808-inf</artifactId>
+    <artifactId>vc-web-gateway-808-ca-srv</artifactId>
     <dependencies>
+        <!-- 统一配置客户端 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-client</artifactId>
+        </dependency>
+        <!-- servlet 容器 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-undertow</artifactId>
+        </dependency>
         <dependency>
             <groupId>www.ccclubs</groupId>
-            <artifactId>vc-biz-protocol-inf</artifactId>
+            <artifactId>vc-biz-gateway-808-ca-srv</artifactId>
             <version>${biz.version}</version>
         </dependency>
     </dependencies>
