--- a/vc-biz/vc-biz-message/vc-biz-gateway/vc-biz-gateway-808-ca-srv/pom.xml
+++ b/vc-biz/vc-biz-message/vc-biz-gateway/vc-biz-gateway-808-ca-srv/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>vc-frm-logger</artifactId>
             <version>${frm.version}</version>
         </dependency>
+        <dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-frm-redis</artifactId>
+            <version>${frm.version}</version>
+        </dependency>
         <!--<dependency>-->
         <!--<groupId>www.ccclubs</groupId>-->
         <!--<artifactId>vc-biz-common-srv</artifactId>-->
