--- a/vc-frm/vc-frm-spring/pom.xml
+++ b/vc-frm/vc-frm-spring/pom.xml
@@ -62,5 +62,9 @@
             <artifactId>guava</artifactId>
             <version>22.0</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.dozer</groupId>
+            <artifactId>dozer</artifactId>
+        </dependency>
     </dependencies>
 </project>
