--- a/vc-biz/vc-biz-message/vc-biz-engine-core/pom.xml
+++ b/vc-biz/vc-biz-message/vc-biz-engine-core/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>vc-biz-mongo-srv</artifactId>
             <version>${biz.version}</version>
         </dependency>
+        <!--kafka-->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
