【更新】redis最近30条状态数据，0200位置数据只更新没装插件的车机

--- a/vc-env/env/rule-engine-srv-dev.yml
+++ b/vc-env/env/rule-engine-srv-dev.yml
@@ -3,8 +3,10 @@ server:
 
 spring:
   redis:
-    host: 127.0.0.1
-    port: 6379
+    host: 118.178.229.234
+    port: 63791
+    password: WDnlDnt6f7GuYh
+    database: 7
     pool:
       maxIdle: 10
       minIdle: 2
