【Added】车机升级管理API

--- a/vc-biz/vc-biz-terminal-srv/pom.xml
+++ b/vc-biz/vc-biz-terminal-srv/pom.xml
@@ -47,6 +47,10 @@
             <artifactId>vc-biz-common-srv</artifactId>
             <version>${biz.version}</version>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
