【fixed】 更新代码，maven格式

--- a/vc-web/vc-web-front/pom.xml
+++ b/vc-web/vc-web-front/pom.xml
@@ -78,6 +78,13 @@
             <artifactId>vc-biz-quota-model</artifactId>
             <version>${biz.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-biz-command-inf</artifactId>
+            <version>${biz.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>www.ccclubs</groupId>
             <artifactId>vc-biz-protocol-inf</artifactId>
@@ -141,12 +148,7 @@
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
         </dependency>
-      <dependency>
-        <groupId>www.ccclubs</groupId>
-        <artifactId>vc-biz-command-inf</artifactId>
-        <version>1.0.0</version>
-        <scope>compile</scope>
-      </dependency>
+
       <!--<dependency>
           <groupId>cn.afterturn</groupId>
           <artifactId>easypoi-web</artifactId>
