--- a/vc-web/vc-web-cfg/src/main/resources/bootstrap.yml
+++ b/vc-web/vc-web-cfg/src/main/resources/bootstrap.yml
@@ -12,7 +12,7 @@ spring:
           #是否暴露加解密接口
           enabled: true
         git:
-          uri: http://120.26.220.241/BurningGroup/vc.git #http://120.26.220.241/BurningGroup/vc.git file://E:/workspace-vc/vc
+          uri: file://${project.parent.parent.basedir} #http://120.26.220.241/BurningGroup/vc.git file://E:/workspace-vc/vc
           searchPaths:  vc-env/env
           username: zhangkejiang
           password: ss123456
