--- a/vc-biz/vc-biz-message/vc-biz-gateway/vc-biz-gateway-gb-srv/pom.xml
+++ b/vc-biz/vc-biz-message/vc-biz-gateway/vc-biz-gateway-gb-srv/pom.xml
@@ -57,12 +57,6 @@
           <version>${netty.version}</version>
       </dependency>
 
-      <!-- https://mvnrepository.com/artifact/javax.persistence/persistence-api -->
-      <!--<dependency>-->
-          <!--<groupId>javax.persistence</groupId>-->
-          <!--<artifactId>persistence-api</artifactId>-->
-      <!--</dependency>-->
-
       <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
       <dependency>
           <groupId>org.apache.commons</groupId>
@@ -80,6 +74,11 @@
           <groupId>www.ccclubs</groupId>
           <artifactId>vc-frm-spring</artifactId>
           <version>${frm.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>www.ccclubs</groupId>
+          <artifactId>vc-biz-gateway-common-srv</artifactId>
+          <version>${biz.version}</version>
       </dependency>
   </dependencies>
 
