--- a/vc-env/env/phoenix-srv-dev.yml
+++ b/vc-env/env/phoenix-srv-dev.yml
@@ -2,10 +2,9 @@ phoenix:
   #zookeeper所在主机地址
   #zk_url: hb-proxy-pub-bp11zgdd317e4af0r-001.hbase.rds.aliyuncs.com,hb-proxy-pub-bp11zgdd317e4af0r-006.hbase.rds.aliyuncs.com,hb-proxy-pub-bp11zgdd317e4af0r-005.hbase.rds.aliyuncs.com
   #测试地址
-  #zk_url: hb-proxy-pub-bp1xa9wgerhn7o1pu-001.hbase.rds.aliyuncs.com,hb-proxy-pub-bp1xa9wgerhn7o1pu-002.hbase.rds.aliyuncs.com,hb-proxy-pub-bp1xa9wgerhn7o1pu-003.hbase.rds.aliyuncs.com
+  zk_url: hb-proxy-pub-bp1xa9wgerhn7o1pu-001.hbase.rds.aliyuncs.com,hb-proxy-pub-bp1xa9wgerhn7o1pu-002.hbase.rds.aliyuncs.com,hb-proxy-pub-bp1xa9wgerhn7o1pu-003.hbase.rds.aliyuncs.com
   #正式地址
-  #zk_url: hb-proxy-pub-bp11x2d97s2oe0b5m-001.hbase.rds.aliyuncs.com,hb-proxy-pub-bp11x2d97s2oe0b5m-002.hbase.rds.aliyuncs.com,hb-proxy-pub-bp11x2d97s2oe0b5m-003.hbase.rds.aliyuncs.com
-  zk_url: hb-proxy-pub-bp1x9t8705l5q04i3-001.hbase.rds.aliyuncs.com
+#  zk_url: hb-proxy-pub-bp11x2d97s2oe0b5m-001.hbase.rds.aliyuncs.com,hb-proxy-pub-bp11x2d97s2oe0b5m-002.hbase.rds.aliyuncs.com,hb-proxy-pub-bp11x2d97s2oe0b5m-003.hbase.rds.aliyuncs.com
 server:
   port: 11117
 
