--- a/vc-env/env/gateway-gb-srv-dev.yml
+++ b/vc-env/env/gateway-gb-srv-dev.yml
@@ -14,7 +14,8 @@ netty:
 gateway:
   server:
     log-print: true       # 打印消息日志
-    buffer-check: false   # 开启缓存检查
+    buffer-check: true   # 开启缓存检查
+    idle-seconds: 10      # 读空闲断开时间间隔(秒)
 
 #kafka生产者配置
 spring:
