--- a/vc-biz/vc-biz-phoenix-inf/pom.xml
+++ b/vc-biz/vc-biz-phoenix-inf/pom.xml
@@ -17,10 +17,22 @@
             <version>1.0.0</version>
         </dependency>
         <dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-frm-validation</artifactId>
+            <version>${frm.version}</version>
+        </dependency>
+        <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
