--- a/vc-env/env/web-front-dev.yml
+++ b/vc-env/env/web-front-dev.yml
@@ -9,28 +9,29 @@ oss:
 
 spring:
   redis:
-    host: 127.0.0.1
+    host: 172.16.3.134
     port: 6379
-    #database: 7
+    password: cjzx2018
+    database: 7
 
   data:
     mongodb:
       history:
-        host: 114.55.24.97
+        host: dds-bp1cdb3a9426d8f41.mongodb.rds.aliyuncs.com
         port: 3717
-        username: zkj_user
-        password: zkj2017
-        database: vc_history
-        authenticationDatabase: vc_history
+        username: pgm_cjkf
+        password: 123qweASD
+        database: ccclubs_p2p_data
+        authenticationDatabase: ccclubs_p2p_data
       remote:
-        host: 114.55.24.97
+        host: dds-bp1cdb3a9426d8f41.mongodb.rds.aliyuncs.com
         port: 3717
-        username: zkj_user
-        password: zkj2017
-        database: vc_remote
-        authenticationDatabase: vc_remote
+        username: pgm_cjkf
+        password: 123qweASD
+        database: ccclubs_p2p_data
+        authenticationDatabase: ccclubs_p2p_data
   kafka:
-    bootstrap-servers: 127.0.0.1:9092
+    bootstrap-servers: 118.25.77.128:9092
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
@@ -47,7 +48,7 @@ dubbo:
   application:
     name: web-front
   registry:
-    address: zookeeper://127.0.0.1:2181
+    address: zookeeper://118.25.77.128:2181
     protocol: zookeeper
     port: 20880
   protocol:
@@ -65,9 +66,9 @@ dubbo:
 druid:
   driver: com.mysql.jdbc.Driver
   jdbc:
-    url: jdbc:mysql://121.199.49.206:3306/ccclubs_data_center?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
-    username: zkj_user
-    password: kANXZYqf2UzghVY7DnjP
+    url: jdbc:mysql://172.16.3.127:3306/ccclubs_data_center?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
+    username: cjzx
+    password: CJzx2018.
   initialSize: 2
   maxActive: 4
   maxIdle: 2
