--- a/vc-env/env/cmd-engine-srv-dev.yml
+++ b/vc-env/env/cmd-engine-srv-dev.yml
@@ -55,13 +55,14 @@ mq:
 #阿里云 MQ Consumer 配置
 ons:
   producerId: PID_terminal_ser
-  consumerId: CID_ser_operation
+  consumerId: CID_ser_operation_test
   accessKey: M6dHCyKyKYUCNbW4
   secretKey: k6gOSH3dNJjFYze4CuxbBWS1PWqvVk
-  consumeThreadNums: 30
-  topic: ser
+  consumeThreadNums: 10
+  topic: ser_test
   # Tag
-  expression: MQTT_03||MQTT_05||MQTT_06||MQTT_0F||MQTT_10||MQTT_46||MQTT_47||MQTT_48||MQTT_49||MQTT_50||MQTT_6F||MQTT_F0
+  expression: MQTT_03||MQTT_05||MQTT_06||MQTT_0F||MQTT_10||MQTT_46||MQTT_47||MQTT_48||MQTT_49||MQTT_50||MQTT_6F||MQTT_F0||MQTT_07
+
 
 mqttAliyun:
   #阿里云 mqtt broker 地址
