--- a/vc-env/env/rule-engine-srv-dev.yml
+++ b/vc-env/env/rule-engine-srv-dev.yml
@@ -152,13 +152,13 @@ mq:
 #阿里云 MQ Consumer 配置
 ons:
   producerId: PID_terminal_ser
-  consumerId: CID_terminal_ser
+  consumerId: CID_terminal_ser_test
   accessKey: M6dHCyKyKYUCNbW4
   secretKey: k6gOSH3dNJjFYze4CuxbBWS1PWqvVk
   consumeThreadNums: 30
-  topic: ser
+  topic: ser_test
   # Tag
-  expression: GB||JT_0200||JT_0201||JT_0704||JT_0900_01||JT_0900_FD||MQTT_41||MQTT_66||MQTT_42||MQTT_64||MQTT_43||MQTT_44||MQTT_45||MQTT_52||MQTT_53||MQTT_60||MQTT_68||MQTT_69||MQTT_6B||MQTT_6C||JT_01F0||JT_7F04
+  expression: GB||JT_0200||JT_0201||JT_0704||JT_0900_01||JT_0900_FD||JT_0100||MQTT_41||MQTT_66||MQTT_42||MQTT_64||MQTT_43||MQTT_44||MQTT_45||MQTT_52||MQTT_53||MQTT_60||MQTT_68||MQTT_69||MQTT_6B||MQTT_6C||JT_01F0||JT_7F04
 
 mqttAliyun:
   #阿里云 mqtt broker 地址
@@ -176,7 +176,7 @@ mqttAliyun:
 
 mqttOwn:
   #自有 mqtt broker 地址
-  host: tcp://120.26.109.248
+  host: tcp://10.252.93.25
   #阿里云 mqtt broker 端口
   port: 27736
   #自有 mqClient ID 前缀
@@ -185,12 +185,8 @@ mqttOwn:
   userName: qsxiaogang
   #密码
   pwd: 513387369
-  #订阅主题
-  #subTopic: ser/car/jhz/rt_0/T1232054/#,ser/car/jhz/rt_0/GB006443/#
-  subTopic: ser/car/jhz/rt_0/#,
   #是否记录上行记录
   logUpDown: true
-
 
 druid:
   driver: com.mysql.jdbc.Driver
