--- a/vc-web/vc-web-phoenix-api/src/main/resources/bootstrap.yml
+++ b/vc-web/vc-web-phoenix-api/src/main/resources/bootstrap.yml
@@ -8,3 +8,10 @@ spring:
       name: phoenix-api
       uri: ${spring.cloud.config.uri}
       
+server:
+  undertow:
+    accesslog:
+      dir: /var/logs/vc/access
+      enabled: true
+      prefix: api_access.
+      pattern: %t %a %h "%r" %s (%D ms)
