--- a/vc-web/vc-web-command-api/src/main/resources/bootstrap.yml
+++ b/vc-web/vc-web-command-api/src/main/resources/bootstrap.yml
@@ -11,3 +11,10 @@ spring:
       uri: ${spring.cloud.config.uri}
 
       
+server:
+  undertow:
+    accesslog:
+      dir: /var/logs/vc/access
+      enabled: true
+      prefix: api_access.
+      pattern: %t %a %h "%r" %s (%D ms)
