--- a/vc-web/vc-web-vtsearch-api/src/main/resources/bootstrap.yml
+++ b/vc-web/vc-web-vtsearch-api/src/main/resources/bootstrap.yml
@@ -22,4 +22,4 @@ server:
       dir: /var/logs/vc/access
       enabled: true
       prefix: api_access.
-      pattern: %t %a %h "%r" %s (%D ms)
+      pattern: '%t %a %h "%r" %s (%D ms)'
