--- a/vc-web/vc-web-command-api/src/main/resources/bootstrap.yml
+++ b/vc-web/vc-web-command-api/src/main/resources/bootstrap.yml
@@ -12,9 +12,9 @@ spring:
 
       
 server:
-  undertow:
+  tomcat:
     accesslog:
-      dir: /var/logs/vc/access
       enabled: true
+      directory: /var/logs/vc/access/command
       prefix: api_access.
       pattern: '%t %a %h "%r" %s (%D ms)'
