--- a/vc-web/vc-web-phoenix-api/src/main/resources/bootstrap.yml
+++ b/vc-web/vc-web-phoenix-api/src/main/resources/bootstrap.yml
@@ -9,9 +9,9 @@ spring:
       uri: ${spring.cloud.config.uri}
       
 server:
-  undertow:
+  tomcat:
     accesslog:
-      dir: /var/logs/vc/access
       enabled: true
+      directory: /var/logs/vc/access/phoenix
       prefix: api_access.
       pattern: '%t %a %h "%r" %s (%D ms)'
