--- a/vc-web/vc-web-vtsearch-api/src/main/resources/bootstrap.yml
+++ b/vc-web/vc-web-vtsearch-api/src/main/resources/bootstrap.yml
@@ -15,11 +15,10 @@ spring:
 #        enabled: true
 
 
-      
 server:
-  undertow:
+  tomcat:
     accesslog:
-      dir: /var/logs/vc/access
       enabled: true
+      directory: /var/logs/vc/access/vtsearch
       prefix: api_access.
       pattern: '%t %a %h "%r" %s (%D ms)'
