--- a/vc-web/vc-web-phoenix-api/src/main/resources/bootstrap.yml
+++ b/vc-web/vc-web-phoenix-api/src/main/resources/bootstrap.yml
@@ -13,5 +13,5 @@ server:
     accesslog:
       enabled: true
       directory: /var/logs/vc/access/phoenix
-      prefix: api_access.
+      prefix: api_access
       pattern: '%t %a %h "%r" %s (%D ms)'
