--- a/vc-web/vc-web-vtsearch-api/src/main/resources/bootstrap.yml
+++ b/vc-web/vc-web-vtsearch-api/src/main/resources/bootstrap.yml
@@ -20,5 +20,5 @@ server:
     accesslog:
       enabled: true
       directory: /var/logs/vc/access/vtsearch
-      prefix: api_access.
+      prefix: api_access
       pattern: '%t %a %h "%r" %s (%D ms)'
