--- a/vc-biz/vc-biz-quota-srv/pom.xml
+++ b/vc-biz/vc-biz-quota-srv/pom.xml
@@ -78,5 +78,16 @@
       <artifactId>vc-biz-usr-orm</artifactId>
       <version>${biz.version}</version>
     </dependency>
+      <dependency>
+          <groupId>org.apache.poi</groupId>
+          <artifactId>poi</artifactId>
+          <version>3.15</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.poi</groupId>
+          <artifactId>poi-ooxml</artifactId>
+          <version>3.15</version>
+      </dependency>
+
   </dependencies>
 </project>
