--- a/vc-env/env/gateway-gb-srv-dev.yml
+++ b/vc-env/env/gateway-gb-srv-dev.yml
@@ -14,8 +14,7 @@ netty:
 gateway:
   server:
     log-print: true       # 打印消息日志
-    buffer-check: true   # 开启缓存检查
-    idle-seconds: 10      # 读空闲断开时间间隔(秒)
+    buffer-check: false   # 开启缓存检查
 
 #kafka生产者配置
 spring:
