--- a/vc-env/env/quota-srv-dev.yml
+++ b/vc-env/env/quota-srv-dev.yml
@@ -65,3 +65,4 @@ zt:
   threadInterval: 0 15 17 * * ?
   updateInterval: 7
   avgDriveTimePerDay: 0.2,1.5,  1.3,2.5,  2.3,3.5,  3.3,6,  5.3,12
+  obdMileThreshold: 155
